--- a/data/equipment/consumable-07-aBOPYlfHAcXUmhF7.htm
+++ b/data/equipment/consumable-07-aBOPYlfHAcXUmhF7.htm
@@ -1,7 +1,6 @@
 Name: Giant Wasp Venom
-Nom: Venin de guèpe géante
-État: changé
-État d'origine: officielle
+Nom: Venin de guêpe géante
+État: officielle
 
 ------ Description (en) ------
 <p>Giant wasp venom interferes with a victim's movement.</p>
@@ -13,10 +12,10 @@ Nom: Venin de guèpe géante
 <p><strong>Stage 2</strong> [[/r 3d6#poison]] poison damage and clumsy 2 (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 4d6#poison]] poison and clumsy 2 (1 round)</p>
 ------ Description (fr) ------
-<p><span>Le venin de guêpe géante interfère avec les mouvements d’une victime. <br></span></p>
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">D</span> Interagir (Blessure)</p>
-<p><span><strong>Jet de sauvegarde</strong> Vigueur DD 25 ; 
-<strong>Durée maximum</strong> 6 rounds; 
-<strong>Stade 1</strong> [[/r 2d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 1 (1 round) ;
-<strong>Stade 2</strong> [[/r 3d6#poison]] dégâts de poison et maladroit 2 (1 round) ;
-<strong>Stade 3</strong> [[/r 4d6#poison]] dégâts de poison et maladroit 2 (1 round)<br></span></p>
+<p>Le venin de guêpe géante interfère avec les mouvements d’une victime.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 25; </p>
+<p><strong>Durée maximum</strong> 6 rounds; </p>
+<p><strong>Stade 1</strong> [[/r 2d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroit} 1 (1 round);</p>
+<p><strong>Stade 2</strong> [[/r 3d6#poison]] dégâts de poison et maladroit 2 (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 4d6#poison]] dégâts de poison et maladroit 2 (1 round)</p>
