--- a/data/equipment/consumable-07-LKwI47eeJC0Y4hGu.htm
+++ b/data/equipment/consumable-07-LKwI47eeJC0Y4hGu.htm
@@ -1,7 +1,6 @@
 Name: Silver Dragon's Breath Potion (Young)
 Nom: Potion de souffle du jeune dragon d'argent
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This liquid contains blood from a silver dragon. For 1 hour after you imbibe the concoction, you can unleash a silver dragon's breath weapon. The potency of the breath depends on the potion's type, based on the age of the dragon whose blood was used to make the potion.</p>
