--- a/data/equipment/consumable-17-LR7Ke2V8vHjQYBni.htm
+++ b/data/equipment/consumable-17-LR7Ke2V8vHjQYBni.htm
@@ -1,7 +1,6 @@
 Name: Black Dragon's Breath Potion (Wyrm)
 Nom: Potion de souffle de dracosire noir
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p style="box-sizing: border-box; user-select: text; color: #191813; font-size: 13px;">This liquid contains blood from a black dragon. For 1 hour after you imbibe the concoction, you can unleash a black dragon's breath weapon. The potency of the breath depends on the potion's type, based on the age of the dragon whose blood was used to make the potion.</p>
