--- a/data/equipment/consumable-12-zQnidYCmLCBPfdii.htm
+++ b/data/equipment/consumable-12-zQnidYCmLCBPfdii.htm
@@ -1,7 +1,6 @@
 Name: Blue Dragon's Breath Potion (Adult)
 Nom: Potion de souffle du dragon bleu adulte
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This liquid contains blood from a blue dragon. For 1 hour after you imbibe the concoction, you can unleash a blue dragon's breath weapon. The potency of the breath depends on the potion's type, based on the age of the dragon whose blood was used to make the potion.</p>
