--- a/data/equipment/consumable-17-2JXUER4xY8s36HUv.htm
+++ b/data/equipment/consumable-17-2JXUER4xY8s36HUv.htm
@@ -1,7 +1,6 @@
 Name: Copper Dragon's Breath Potion (Wyrm)
 Nom: Potion de souffle de dracosire de cuivre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This liquid contains blood from a copper dragon. For 1 hour after you imbibe the concoction, you can unleash a copper dragon's breath weapon. The potency of the breath depends on the potion's type, based on the age of the dragon whose blood was used to make the potion.</p>
