--- a/data/equipment/consumable-17-OiQDcUMrlrYXDgEf.htm
+++ b/data/equipment/consumable-17-OiQDcUMrlrYXDgEf.htm
@@ -1,7 +1,6 @@
 Name: White Dragon's Breath Potion (Wyrm)
 Nom: Potion de souffle de dracosire blanc
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This liquid contains blood from a white dragon. For 1 hour after you imbibe the concoction, you can unleash a white dragon's breath weapon. The potency of the breath depends on the potion's type, based on the age of the dragon whose blood was used to make the potion.</p>
