--- a/data/equipment/consumable-08-KdeeRCrtsDCJLfgc.htm
+++ b/data/equipment/consumable-08-KdeeRCrtsDCJLfgc.htm
@@ -1,7 +1,6 @@
 Name: Nettleweed Residue
 Nom: Résidu de lierrortie
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Concentrated sap of stinging weeds makes an effective toxin.</p>
@@ -14,11 +13,12 @@ Nom: Résidu de lierrortie
 <p><strong>Stage 2</strong> [[/r 10d6#poison]] poison damage (1 minute)</p>
 <p><strong>Stage 3</strong> [[/r 13d6#poison]] poison damage (1 minute)</p>
 ------ Description (fr) ------
-<p><span>La sève concentrée de plantes urticantes donne un poison efficace.<br></span></p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir(Contact)</p>
+<p>La sève concentrée de plantes urticantes donne un poison efficace.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Contact)</p>
 <p><span><strong>Jet de sauvegarde</strong> Vigueur DD 27;</p>
 <p><strong>Délai</strong>1 minute;</p>
 <p><strong>Maximum Duration</strong> 6 minutes;</p> 
 <p><strong>Stade 1</strong> [[/r 8d6#poison]]  dégâts de poison (1 minute);</p> 
-<p><strong>Stade 2</strong> [[/r 10d6#poison]] dégâts de poison (1 mimute) ;</p> 
-<p><strong>Stade 3</strong> [[/r 13d6#poison]] dégâts de poison (1 minute)</span></p>
+<p><strong>Stade 2</strong> [[/r 10d6#poison]] dégâts de poison (1 mimute);</p> 
+<p><strong>Stade 3</strong> [[/r 13d6#poison]] dégâts de poison (1 minute)</p>
