--- a/data/equipment/consumable-15-E999hL7XlAlfZhjK.htm
+++ b/data/equipment/consumable-15-E999hL7XlAlfZhjK.htm
@@ -1,5 +1,5 @@
 Name: Potion of Flying (Greater)
-Nom: Potion de vol (Supérieur)
+Nom: Potion de vol (supérieur)
 État: officielle
 
 ------ Description (en) ------
