--- a/data/equipment/consumable-08-WL4O32qFifxnMj0H.htm
+++ b/data/equipment/consumable-08-WL4O32qFifxnMj0H.htm
@@ -1,7 +1,6 @@
 Name: Wyvern Poison
 Nom: Poison de vouivre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Properly harvested and preserved, the poison from a wyvern's sting is effective and direct.</p>
@@ -13,10 +12,10 @@ Nom: Poison de vouivre
 <p><strong>Stage 2</strong> [[/r 6d6#poison]] poison damage (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 8d6#poison]] poison damage (1 round)</p>
 ------ Description (fr) ------
-<p><span>Correctement récolté et conservé, le poison du dard de la vouivre est efficace et rapide.<br></span></p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">D</span> Interagir (Blessure)</p>
-<p><span><strong>Jet de sauvegarde</strong> Vigueur DD 26 ;  
-<strong>Durée maximum </strong> 6 rounds; 
-<strong>Stade 1</strong> [[/r 5d6#poison]] dégâts de poison (1 round); 
-<strong>Stade 2</strong> [[/r 6d6#poison]] dégâts de poison (1 round); 
-<strong>Stade 3</strong> [[/r 8d6#poison]] dégâts de poison (1 round)<br></span></p>
+<p>Correctement récolté et conservé, le poison du dard de la vouivre est efficace et rapide.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 26 ; </p> 
+<p><strong>Durée maximum </strong> 6 rounds;</p> 
+<p><strong>Stade 1</strong> [[/r 5d6#poison]] dégâts de poison (1 round);</p> 
+<p><strong>Stade 2</strong> [[/r 6d6#poison]] dégâts de poison (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 8d6#poison]] dégâts de poison (1 round)</p>
