--- a/data/equipment/consumable-09-ca2lzxfJxvuLDrKu.htm
+++ b/data/equipment/consumable-09-ca2lzxfJxvuLDrKu.htm
@@ -1,7 +1,6 @@
 Name: Lich Dust
 Nom: Poussière de liche
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Dust salvaged from the remains of a destroyed lich has paralytic properties that make it a valuable poison.</p>
@@ -14,11 +13,12 @@ Nom: Poussière de liche
 <p><strong>Stage 2</strong> [[/r 5d6#poison]] poison damage and fatigued (1 minute)</p>
 <p><strong>Stage 3</strong> [[/r 5d6#poison]] poison damage, fatigued, and @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralyzed} (1 minute)</p>
 ------ Description (fr) ------
-<p><span>La poussière récupérée sur les restes d’une liche détruite a des proprié‑ tés paralysantes qui en font un précieux poison. <br></span></p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Ingéré)</p>
-<p><span><strong>Jet de sauvegarde</strong> Vigueur DD 28; 
-<strong>Délai</strong>,10 minutes; 
-<strong>Durée maximum</strong> 6 minutes; 
-<strong>Stade 1</strong> @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué}  (1 minute); 
-<strong>Stade 2</strong>  [[/r 5d6#poison]] dégâts de poison et fatigué (1 minute); 
-<strong>Stade 3</strong>  [[/r 5d6#poison]] dégâts de poison, fatigué et @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralysé} (1 minute)<br></span></p>
+<p>La poussière récupérée sur les restes d’une liche détruite a des propriétés paralysantes qui en font un précieux poison. </p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Ingéré)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 28; </p>
+<p><strong>Délai</strong>,10 minutes;</p> 
+<p><strong>Durée maximum</strong> 6 minutes; </p>
+<p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.HL2l2VRSaQHu9lUw]{Fatigué} (1 minute); </p>
+<p><strong>Stade 2</strong> [[/r 5d6#poison]] dégâts de poison et fatigué (1 minute); </p>
+<p><strong>Stade 3</strong> [[/r 5d6#poison]] dégâts de poison, fatigué et @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralysé} (1 minute)</p>
