--- a/data/equipment/consumable-09-rKknk8odXDBpON5l.htm
+++ b/data/equipment/consumable-09-rKknk8odXDBpON5l.htm
@@ -1,11 +1,10 @@
 Name: Explosive Ammunition
 Nom: Munition explosive
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>This piece of ammunition is coated in gritty black soot. When activated <em>explosive ammunition</em> hits a target, the missile explodes in a 10-foot burst, dealing [[/r 6d6]] fire damage to each creature in the area (including the target). Each creature must attempt a DC 25 basic Reflex save.</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-<p><span>Cette munition est enduite d’une suie noire. Quand une munition explosive activée touche sa cible, elle explose dans un rayon de 3 mètres, infligeant [[/r 6d6]] dégâts de feu à toutes les créatures de la zone (y compris la cible). Chacune fait un jet de Réflexes basique DD 25.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p>Cette munition est enduite d’une suie noire. Quand une munition explosive activée touche sa cible, elle explose dans un rayon de 3 mètres, infligeant [[/r 6d6]] dégâts de feu à toutes les créatures de la zone (y compris la cible). Chacune fait un jet de Réflexes basique DD 25.</p>
