--- a/data/equipment/consumable-12-9Kk6P7idLGRhZJ2q.htm
+++ b/data/equipment/consumable-12-9Kk6P7idLGRhZJ2q.htm
@@ -1,7 +1,6 @@
 Name: Bleeding Spines Snare
 Nom: Piège artisanal à pointes barbelées
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>When a creature enters the square, spines covered in numerous jagged thorns protrude out to stab it, dealing 8d8 piercing damage and 2d8 persistent bleed damage. The creature must attempt a DC 31 basic Reflex saving throw. After the initial trigger, the spines retract and protrude again repeatedly for 1 minute, forcing any creature that enters the space or ends its turn in the space to attempt a Reflex save against the spines' damage.</p>
