--- a/data/equipment/consumable-13-87AzvRja9uQOLJCC.htm
+++ b/data/equipment/consumable-13-87AzvRja9uQOLJCC.htm
@@ -1,7 +1,6 @@
 Name: Deathcap Powder
 Nom: Poudre d'amanite phalloïde
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>The toxic deathcap mushroom can be dried, ground, and treated to form a flavorless powder with accelerated effects.</p>
@@ -15,10 +14,11 @@ Nom: Poudre d'amanite phalloïde
 <p><strong>Stage 3</strong> [[/r 20d6#poison]] poison damage and sickened 3 (1 minute)</p>
 ------ Description (fr) ------
 <p><span>On peut faire sécher la toxique amanite phalloïde, la broyer et en faire une poudre sans goût aux effets accélérés.<br></span></p>
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Ingéré)</p>
-<p><span><strong>Jet de sauvegarde</strong> Vigueur DD 33 ;</p>
-<p><strong>Délait</strong>10 minutes; </p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Ingéré)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 33 ;</p>
+<p><strong>Délai</strong>10 minutes; </p>
 <p><strong>Maximum Duration</strong> 6 minutes;</p> 
 <p><strong>Stade 1</strong> [[/r 13d6#poison]] dégâts de poison (1 minute); </p>
 <p><strong>Stade 2</strong> [[/r 17d6#poison]] dégâts de poison et@Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 2 (1 minute) ; </p>
-<p><strong>Stade 3</strong> [[/r 20d6#poison]] dégâts de poison et malade 3 (1 minute)<br></span></p>
+<p><strong>Stade 3</strong> [[/r 20d6#poison]] dégâts de poison et malade 3 (1 minute)</p>
