--- a/data/equipment/consumable-13-iRDCa4OVSTGUD3vi.htm
+++ b/data/equipment/consumable-13-iRDCa4OVSTGUD3vi.htm
@@ -1,7 +1,6 @@
 Name: Purple Worm Venom
 Nom: Venin de ver pourpre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Venom from enormous purple worms leaves a victim weakened.</p>
@@ -13,10 +12,11 @@ Nom: Venin de ver pourpre
 <p><strong>Stage 2</strong> [[/r 6d6#poison]] poison damage and enfeebled 2 (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 8d6#poison]] poison and enfeebled 2 (1 round)</p>
 ------ Description (fr) ------
-<p><strong>Activate</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">D</span> Interagir (Blessure)</p>
-<p><span>Le venin des énormes vers pourpres affaiblit sa victime.<br></span></p>
-<p><span><strong>Jet de sauvegarde</strong> Vigueur DD 32; </p>
+<p>Le venin des énormes vers pourpres affaiblit sa victime.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir (Blessure)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 32; </p>
 <p><strong> Durée maximum </strong> 6 rounds; </p>
 <p><strong>Stade 1</strong>  [[/r 5d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 2 (1 round) ; </p>
 <p><strong>Stade 2</strong>  [[/r 6d6#poison]] dégâts de poison et affaibli 2 (1 round) ; </p>
-<p><strong>Stade 3</strong>  [[/r 8d6#poison]] dégâts de poison et affaibli 2 (1 round)<br></span></p>
+<p><strong>Stade 3</strong>  [[/r 8d6#poison]] dégâts de poison et affaibli 2 (1 round)</p>
