--- a/data/equipment/consumable-15-GMi5tw0cbMx3ZQPg.htm
+++ b/data/equipment/consumable-15-GMi5tw0cbMx3ZQPg.htm
@@ -1,7 +1,6 @@
 Name: Mindfog Mist
 Nom: Brumentale
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Mindfog mist can be used to undermine spellcasters, as its effect on a victim's mental faculties are swift and powerful.</p>
@@ -14,11 +13,12 @@ Nom: Brumentale
 <p><strong>Stage 2</strong> @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confused} and stupefied 3 (1 round)</p>
 <p><strong>Stage 3</strong> confused and stupefied 4 (1 round)</p>
 ------ Description (fr) ------
-<p><span>La brumentale sert à handicaper les incantateurs car elle possède un effet aussi puissant que rapide sur les facultés mentales de sa victime. <br></span></p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Inhalé)</p>
-<p><span><strong>Jet de sauvegarde</strong> Vigueur DD 35;</p> 
+<p>La brumentale sert à handicaper les incantateurs car elle possède un effet aussi puissant que rapide sur les facultés mentales de sa victime.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interact (Inhalé)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 35;</p> 
 <p><strong>Délai</strong>1 round; </p>
 <p><strong> Durée maximum </strong> 6 rounds; </p>
 <p><strong>Stade 1</strong> @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié} 2 (1 round) </p>
 <p><strong>Stade 2</strong> @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus} et stupéfié 3 (1 round) </p>
-<p><strong>Stade 3</strong> confus et stupéfié 4 (1 round)<br></span></p>
+<p><strong>Stade 3</strong> confus et stupéfié 4 (1 round)<</p>
