--- a/data/equipment/consumable-16-9nhvZ7VnDQHuyBdf.htm
+++ b/data/equipment/consumable-16-9nhvZ7VnDQHuyBdf.htm
@@ -1,7 +1,6 @@
 Name: Brimstone Fumes
 Nom: Fumées sulfureuses
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Fumes from the forges of Hell drain health and strength alike.</p>
@@ -14,11 +13,12 @@ Nom: Fumées sulfureuses
 <p><strong>Stage 2</strong> [[/r 8d6#poison]] poison damage and enfeebled 2 (1 round)</p>
 <p><strong>Stage 3</strong> [[/r 10d6#poison]] poison damage and enfeebled 3 (1 round)</p>
 ------ Description (fr) ------
-<p><span>Les fumées des forges des Enfers drainent la santé et sapent les forces. <br></span></p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Inhalé)</p>
-<p><span><strong>Jet de sauvegarde</strong> Vigueur DD 36;  </p>
+<p>Les fumées des forges des Enfers drainent la santé et sapent les forces.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Inhalé)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 36;  </p>
 <p><strong>Délai</strong>1 round; </p>
 <p><strong>Durée maximum</strong> 6 rounds; </p>
-<p><strong>Stade 1</strong> [[/r 7d6#poison]]  dégâts de poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round); </p>
-<p><strong>Stade 2</strong> [[/r 8d6#poison]] dégâts de poison et affaibli 2 (1 round);</p>
-<p><strong>Stade 3</strong> [[/r 10d6#poison]] dégâts de poison et affaibli 3 (1 round)<br></span></p>
+<p><strong>Stade 1</strong> [[/r 7d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 1 (1 round); </p>
+<p><strong>Stade 2</strong> [[/r 8d6#poison]] dégâts de poison et Affaibli 2 (1 round);</p>
+<p><strong>Stade 3</strong> [[/r 10d6#poison]] dégâts de poison et Affaibli 3 (1 round)<br></span></p>
