--- a/data/equipment/consumable-17-MP7updiiSct04vno.htm
+++ b/data/equipment/consumable-17-MP7updiiSct04vno.htm
@@ -1,7 +1,6 @@
 Name: Hemlock
 Nom: Cigüe
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Concentrated hemlock is a particularly deadly toxin that halts muscle action-including that of the victim's heart.</p>
@@ -14,11 +13,12 @@ Nom: Cigüe
 <p><strong>Stage 2</strong> [[/r 21d6#poison]] poison damage and enfeebled 3 (10 minutes)</p>
 <p><strong>Stage 3</strong> [[/r 26d6#poison]] poison damage and enfeebled 4 (10 minutes)</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Ingéré)</p>
-<p><span>La ciguë concentrée est une toxine redoutable qui entrave l’action des muscles, y compris du cœur.<br></span></p>
-<p><span><strong>Jet de sauvegarde</strong> Vigueur DD 40; </p>
+<p>La ciguë concentrée est une toxine redoutable qui entrave l’action des muscles, y compris du cœur.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Ingéré)</p>
+<p><strong>Jet de sauvegarde</strong> Vigueur DD 40; </p>
 <p><strong>Délai</strong> 30 minutes; </p>
 <p>>strong>Durée maximum</strong> 60 minutes; </p>
-<p><strong>Stade 1</strong> [[/r 17d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 2 (10 minutes);  </p>
+<p><strong>Stade 1</strong> [[/r 17d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaibli} 2 (10 minutes);</p>
 <p><strong>Stade 2</strong> [[/r 21d6#poison]] dégâts de poison et affaibli 3 (10 minutes); </p>
-<p><strong>Stade 3</strong> [[/r 26d6#poison]] dégâts de poison et affaibli 4 (10 minutes)  <br></span></p>
+<p><strong>Stade 3</strong> [[/r 26d6#poison]] dégâts de poison et affaibli 4 (10 minutes)</p>
