--- a/data/equipment/consumable-20-gDGPvobJV1QGYBPy.htm
+++ b/data/equipment/consumable-20-gDGPvobJV1QGYBPy.htm
@@ -1,7 +1,6 @@
 Name: Tears of Death
 Nom: Larmes de la mort
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Tears of death are among the most powerful of alchemical poisons, distilled from extracts of five other deadly poisons in just the right ratios.</p>
@@ -14,11 +13,12 @@ Nom: Larmes de la mort
 <p><strong>Stage 2</strong> [[/r 25d6#poison]] poison damage and paralyzed (1 minute)</p>
 <p><strong>Stage 3</strong> [[/r 30d6#poison]] poison damage and paralyzed (1 minute)</p>
 ------ Description (fr) ------
-<p><span>Les larmes de la mort font partie des poisons alchimiques les plus puissants et sont distillées à partir d’extraits de cinq autres poisons mortels selon un dosage précis.<br></span></p>
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir (Contact)</p>
-<p><span><strong>Jet de sauvegard</strong> Vigueur DD 46; </p>
+<p>Les larmes de la mort font partie des poisons alchimiques les plus puissants et sont distillées à partir d’extraits de cinq autres poisons mortels selon un dosage précis.</p>
+<hr />
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir (Contact)</p>
+<p><strong>Jet de sauvegard</strong> Vigueur DD 46; </p>
 <p><strong>Délai</strong>1 minute; </p>
 <p><strong>Durée maximum</strong> 10 minutes; </p>
 <p><strong>Stade 1</strong> [[/r 18d6#poison]] dégâts de poison et @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralysé}  (1 round); </p>
-<p><strong>Stade 2</strong> [[/r 25d6#poison]] dégâts de poison et paralysé (1 min) ; </p>
-<p><strong>Stade 3</strong> [[/r 30d6#poison]] dégâts de poison et paralysé (1 min)<br></span></p>
+<p><strong>Stade 2</strong> [[/r 25d6#poison]] dégâts de poison et Paralysé (1 min) ; </p>
+<p><strong>Stade 3</strong> [[/r 30d6#poison]] dégâts de poison et Paralysé (1 min)</p>
