--- a/data/equipment/consumable-12-KrtZmC3qfZIGXu76.htm
+++ b/data/equipment/consumable-12-KrtZmC3qfZIGXu76.htm
@@ -9,6 +9,5 @@ Nom: Fer d'équilibrage
 <p>If you have the Certain Strike feat, the failure effect increases to deal the weapon's normal damage.</p>
 ------ Description (fr) ------
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> @Compendium[pf2e.feats-srd.h5DzKmKDADGhvmF9]{Frappe Certaine}</p>
-<p>Ce talisman conçu à partir d’un éclat de fer froid spécialement traité vous permet de contrer un effet magique. Lorsque vous activez l’éclat de dissipation, il tente de contrer un unique sort actif sur la cible, comme le ferait le sort dissipation de la magie au niveau 8 (modificateur de contre +29)</p>
-<p>Si vous activez le talisman lors d’un succès sur une @Compendium[pf2e.feats-srd.6AXAJuMEMpxU27PJ]{Coupe dissipante}, il tente de contrer tous les sorts actifs sur la cible.</p>
-<p><strong>Conditions</strong> Vous êtes maître avec l’arme support</p>
+<p>Cette petite bande de fer possède un poids mouvant qui aide à équilibrer l’arme support. Lorsque vous l’activez, vous utilisez Frappe certaine, comme le don de guerrier. Vous devez remplir les conditions habituelles, y compris à l’égard du trait persévérer.</p>
+<p>Si vous disposez déjà du don Frappe certaine, l’effet d’échec s’améliore et inflige les dégâts normaux de l’arme.</p>
