--- a/data/equipment/equipment-10-vuvRsWXrzHbs0tF5.htm
+++ b/data/equipment/equipment-10-vuvRsWXrzHbs0tF5.htm
@@ -1,6 +1,6 @@
 Name: Replacement Filter (Level 10)
-Nom: 
-État: auto-trad
+Nom: Filtre de remplacement (Niveau 10)
+État: libre
 
 ------ Description (en) ------
 <p>A replacement filter for a @Compendium[pf2e.equipment-srd.kDrlBnkDMVxPrahI]{Water Purifier}. The counteract modifier using this filter is +17.</p>
