--- a/data/equipment/equipment-05-CtAg4DpSssKBIw8R.htm
+++ b/data/equipment/equipment-05-CtAg4DpSssKBIw8R.htm
@@ -1,6 +1,6 @@
 Name: Replacement Filter (Level 5)
 Nom: Filtre de remplacement (Niveau 5)
-État: auto-trad
+État: libre
 
 ------ Description (en) ------
 <p>A replacement filter for a @Compendium[pf2e.equipment-srd.kDrlBnkDMVxPrahI]{Water Purifier}. The counteract modifier using this filter is +9.</p>
