--- a/data/equipment/armor-16-LVixPROPOwIfHgEK.htm
+++ b/data/equipment/armor-16-LVixPROPOwIfHgEK.htm
@@ -1,6 +1,6 @@
 Name: Dragonhide Shield (High-Grade)
 Nom: Bouclier en Peau de Dragon de Haute Qualité
-État: changé
+État: libre
 
 ------ Description (en) ------
 <p><span>Dragonhide shields are each immune to one damage type based on the type of dragon.</span></p>
@@ -38,7 +38,7 @@ Nom: Bouclier en Peau de Dragon de Haute Qualité
 </table>
 <p><span>The shield has Hardness 7, HP 28, and BT 14.<br /><strong>Craft Requirements</strong> dragonhide worth at least 4,400 gp </span></p>
 ------ Description (fr) ------
-<p><span>Chaque bouclier en peau de dragon est immunisé contre un type de dégâts selon le type de dragon.</span></p>
+<p>Chaque bouclier en peau de dragon est immunisé contre un type de dégâts selon le type de dragon.</p>
 <table style="height: 134px; width: 368px;" border="1">
 <tbody style="box-sizing: border-box; user-select: text;">
 <tr style="box-sizing: border-box; user-select: text; height: 17px;">
@@ -46,25 +46,26 @@ Nom: Bouclier en Peau de Dragon de Haute Qualité
 <td style="box-sizing: border-box; user-select: text; color: white; width: 251px; text-align: center; background-color: #522e2c; height: 17px;"><strong>Résistance</strong></td>
 </tr>
 <tr style="box-sizing: border-box; user-select: text; height: 17px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; height: 17px; text-align: center;">Airain, or ou rouge<br><span id="ctl00_MainContent_DetailedOutput" style="box-sizing: border-box; user-select: text; display: block;"></span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; height: 17px; text-align: center;"><span>Feu</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; height: 17px; text-align: center;">Airain, or ou rouge<br><span id="ctl00_MainContent_DetailedOutput" style="box-sizing: border-box; user-select: text; display: block;"></td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; height: 17px; text-align: center;">Feu</td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;"><span>Argent ou blanc</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;"><span>Froid&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;">Argent ou blanc</td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;">Froid</td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;"><span>Bleu ou bronze</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;"><span>Électricité&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;">Bleu ou bronze</td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;">Électricité</td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;"><span>Noir ou cuivre</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;"><span>Acide&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #eee5c8; text-align: center; height: 20px;">Noir ou cuivre</td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #eee5c8; text-align: center; height: 20px;">Acide</td>
 </tr>
 <tr style="height: 20px;">
-<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;"><span>Vert</span></td>
-<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;"><span>Poison&nbsp;</span></td>
+<td style="box-sizing: border-box; user-select: text; width: 116px; background-color: #f6f1e1; text-align: center; height: 20px;">Vert</td>
+<td style="box-sizing: border-box; user-select: text; width: 251px; background-color: #f6f1e1; text-align: center; height: 20px;">Poison</td>
 </tr>
 </tbody>
 </table>
-<p><span>Le bouclier a une solidité de 7, 28 PV et une SR de 14.<br /><strong>Conditions de fabrication</strong> au moins 4 400 po de peau de dragon</span></p>
+<p>Le bouclier a une solidité de 7, 28 PV et une SR de 14.</p>
+<p><strong>Conditions de fabrication</strong> au moins 4 400 po de peau de dragon</p>
