--- a/data/equipment/equipment-00-Zycu6zaGvDsqLH5g.htm
+++ b/data/equipment/equipment-00-Zycu6zaGvDsqLH5g.htm
@@ -1,9 +1,8 @@
 Name: Sheath
 Nom: Gaine
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A sheath or scabbard lets you easily carry a weapon on your person.</p>
 ------ Description (fr) ------
-<p><span class="fontstyle0">une gaine ou fourreau vous permet de porter facilement une arme sur vous.</span> </p>
+<p>Une gaine ou fourreau vous permet de porter facilement une arme sur vous. </p>
