--- a/data/feats/class-20-EHorYedQ8r05qAtk.htm
+++ b/data/feats/class-20-EHorYedQ8r05qAtk.htm
@@ -6,7 +6,7 @@ PrereqFR: Proie commune
 
 ------ Benefits and spoiler ----
 Benefits: You can divide your attention three ways when hunting.
-Avantage: Vous pouvez diviser votre attention de trois façons quand vous chassez.
+Avantage: Vous pouvez choisir deux alliés pour chasser votre Proie.
 
 ------ Description (en) ------
 <p>You can divide your attention three ways when hunting. When you use @Compendium[pf2e.actionspf2e.JYi4MnsdFu618hPm]{Hunt Prey}, you can designate three creatures as prey, designate two creatures as prey and share the effect with one ally (as @Compendium[pf2e.feats-srd.Aqhsx5duEpBgaPB0]{Shared Prey}), or designate one creature as prey and share the effect with two allies.</p>
@@ -16,7 +16,7 @@ Avantage: Vous pouvez diviser votre attention de trois façons quand vous chasse
 <li>@Compendium[pf2e.feat-effects.mNk0KxsZMFnDjUA0]{Effect: Hunter's Edge, Precision}</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous focalisez votre attention sur trois créatures distinctes quand vous chassez. Quand vous utilisez Chasser une proie, vous pouvez désigner trois créatures en guise de proies, ou deux créatures et partager l’effet avec un allié (comme avec Proie commune), ou une créature et partager l’effet avec deux alliés.</p>
+<p>Vous focalisez votre attention sur trois créatures distinctes quand vous chassez. Quand vous utilisez Chasser une proie, vous pouvez désigner trois créatures en guise de proies ou deux créatures et partager l’effet avec un allié (comme avec Proie commune) ou une créature et partager l’effet avec deux alliés.</p>
 <ul>
 <li>@Compendium[pf2e.feat-effects.uXCU8GgriUjuj5FV]{Effet: Avantage du chasseur, Déluge}</li>
 <li>@Compendium[pf2e.feat-effects.mNk0KxsZMFnDjUA0]{Effet: Avantage du chasseur, Précision}</li>
