--- a/data/equipment/equipment-03-SswqJqeAWGtX3tTF.htm
+++ b/data/equipment/equipment-03-SswqJqeAWGtX3tTF.htm
@@ -1,7 +1,6 @@
 Name: Hat of the Magi
 Nom: Couvre-chef de thaumaturge
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This hat comes in many forms, such as a colorful turban or a pointy hat with a brim, and can bear symbols or runes. It grants you a +1 item bonus to Arcana checks and allows you to cast the @Compendium[pf2e.spells-srd.Qw3fnUlaUbnn7ipC]{Prestidigitation} cantrip as an arcane innate spell.</p>
