--- a/data/equipment/equipment-03-uhka9LHEP3wDKytG.htm
+++ b/data/equipment/equipment-03-uhka9LHEP3wDKytG.htm
@@ -12,4 +12,4 @@ Nom: Laboratoire d'alchimie (complet)
 <li>+1 item bonus to Crafting alchemical item</li>
 </ul>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Il vous faut un laboratoire d’alchimie pour créer des objets alchimiques lors d’un intermède. Un laboratoire d’alchimie complet vous donne un bonus d’objet de +1 aux tests d’Artisanat pour fabriquer des objets alchimiques.&nbsp;</span></p>
+<p>Il vous faut un laboratoire d’alchimie pour créer des objets alchimiques lors d’un intermède. Un laboratoire d’alchimie complet vous donne un bonus d’objet de +1 aux tests d’Artisanat pour fabriquer des objets alchimiques.</p>
