--- a/data/equipment/equipment-04-g2oaOGSpttfH1q6W.htm
+++ b/data/equipment/equipment-04-g2oaOGSpttfH1q6W.htm
@@ -1,7 +1,6 @@
 Name: Lifting Belt
 Nom: Ceinture de levée
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This wide leather belt grants you a +1 item bonus to Athletics checks and increases the amount you can easily carry. You can carry Bulk equal to 6 + your Strength modifier before becoming encumbered, and you can hold and carry a total Bulk up to 11 + your Strength modifier.</p>
@@ -14,5 +13,6 @@ Nom: Ceinture de levée
 <li>+1 item bonus to Athletics checks</li>
 </ul>
 ------ Description (fr) ------
-<p><span id="ctl00_MainContent_DetailedOutput">Cette large ceinture de cuir vous confère un bonus d’objet de +1 aux tests d’Athlétisme et augmente le poids que vous pouvez transporter sans difficulté. Vous pouvez transporter un montant d’Encombrement égal à 6 + votre modificateur de Force avant d’être surchargé, et vous pouvez transporter un Encombrement total maximum de 11 + votre modificateur de Force.<br></span></p>
-<p><span id="ctl00_MainContent_DetailedOutput"><strong>Activation</strong> <img class="actiondark" style="height: 15px; padding: 0px 2px 0px 2px;" src="https://2e.aonprd.com/Images/Actions/TwoActions.png" alt="Two Actions"> Interagir; <strong>Effet</strong>  Vous soulevez un objet d’un Encombrement maximum de 8 comme s’il était très léger. Ceci nécessite vos deux mains, et si l’objet est verrouillé ou maintenu en place d’une façon ou d’une autre, vous pouvez tenter de l’Ouvrir de force en utilisant Athlétisme au cours de cette activation. L’objet conserve son poids normal et son Encombrement pour toutes autres fins — vous ignorez simplement son poids. L’effet dure jusqu’à la fin de votre pro‑ chain tour.</span></p>
+<p>Cette large ceinture de cuir vous confère un bonus d’objet de +1 aux tests d’Athlétisme et augmente le poids que vous pouvez transporter sans difficulté. Vous pouvez transporter un montant d’Encombrement égal à 6 + votre modificateur de Force avant d’être surchargé, et vous pouvez transporter un Encombrement total maximum de 11 + votre modificateur de Force.<br></span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">D</span> Interagir</p> 
+<p><strong>Effet</strong>  Vous soulevez un objet d’un Encombrement maximum de 8 comme s’il était très léger. Ceci nécessite vos deux mains, et si l’objet est verrouillé ou maintenu en place d’une façon ou d’une autre, vous pouvez tenter de l’Ouvrir de force en utilisant Athlétisme au cours de cette activation. L’objet conserve son poids normal et son Encombrement pour toutes autres fins — vous ignorez simplement son poids. L’effet dure jusqu’à la fin de votre prochain tour.</p>
